# nem-price-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  FEATURES.md  README.md  docker-compose.yml
migrations/: 001_init.sql
src/: config.rs  main.rs
src/bot/: callbacks.rs  commands.rs  messages.rs  mod.rs  notifier.rs
src/data/: fetcher.rs  mod.rs  parser.rs  weather.rs
src/db/: mod.rs  repository.rs
src/engine/: analyzer.rs  mod.rs  scheduler.rs
